--- a/app/views/register-as-a-data-donor/v1/index.html
+++ b/app/views/register-as-a-data-donor/v1/index.html
@@ -139,7 +139,7 @@
           <a href="/{{ PROTOTYPEURL }}/your-match/we-matched-you-email-2">Data donation request email</a>
         </li>
         <li>
-          <a href="/{{ PROTOTYPEURL }}/your-match/google-deepmind-study-2">Google DeepMind study</a>
+          <a href="/{{ PROTOTYPEURL }}/your-match/UK-biobank-study-2">UK Biobank study</a>
         </li>
         <li>
           <a href="/{{ PROTOTYPEURL }}/your-match/we-wont-share-your-data">User selects no to sharing their data</a>
