--- a/app/views/register-as-a-data-donor/v1/your-match/we-matched-you-email-2.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/we-matched-you-email-2.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
-{% set contentTitle = "Google DeepMind wants to use your data for their research study on Crohn's disease" %}
+{% set contentTitle = "UK Biobank wants to use your data for their research study on Crohn's disease" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -31,7 +31,7 @@
         <li>where you live</li>
       </ul>
 
-      <p><strong>Choose whether you want to donate your data to this research study: </strong><br><a href="/{{ PROTOTYPEURL }}/your-match/google-deepmind-study-2">www.nhs.uk/data-donor-sign-in</a></p>
+      <p><strong>Choose whether you want to donate your data to this research study: </strong><br><a href="/{{ PROTOTYPEURL }}/your-match/UK-biobank-study-2">www.nhs.uk/data-donor-sign-in</a></p>
 
     </div>
   </div>
