--- a/app/views/register-as-a-data-donor/v1/your-match/we-matched-you-email.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/we-matched-you-email.html
@@ -23,7 +23,7 @@
     <div class="nhsuk-grid-column-full">
 
       <h1 class="nhsuk-heading-l">{{ contentTitle}}</h1>
-      <p>Google DeepMind wants to use your data for their research study on Crohn's disease in 18 to 30 year olds.</p>
+      <p>UK Biobank wants to use your data for their research study on Crohn's disease in 18 to 30 year olds.</p>
 
       <p>You were selected because of:</p>
       <ul>
@@ -31,7 +31,7 @@
         <li>where you live</li>
       </ul>
 
-      <p><strong>Find out more about this research study: </strong><br><a href="/{{ PROTOTYPEURL }}/your-match/google-deepmind-study">www.nhs.uk/data-donor-sign-in</a></p>
+      <p><strong>Find out more about this research study: </strong><br><a href="/{{ PROTOTYPEURL }}/your-match/UK-biobank-study">www.nhs.uk/data-donor-sign-in</a></p>
 
     </div>
   </div>
