--- a/app/views/register-as-a-data-donor/v1/your-match/we-matched-you.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/we-matched-you.html
@@ -231,13 +231,13 @@
         <td bgcolor="#ffffff" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;padding-top:0;padding-bottom:16px;padding-right:16px;padding-left:16px;font-family:sans-serif;font-size:18px;line-height:140%;color:#555555;text-align:left;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;" >
 
           <h1 style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin-top:16px;margin-bottom:16px;margin-right:0;margin-left:0;font-family:sans-serif;font-size:28px;line-height:150%;color:#333333;font-weight:800;" >{{ contentTitle }}</h1>
-          <p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" >Google DeepMind wants to use your data for their research study on Crohn's disease in 18 to 30 year olds.</p>
+          <p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" >UK Biobank wants to use your data for their research study on Crohn's disease in 18 to 30 year olds.</p>
           <p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" >You were selected because of:</p>
           <ul style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
             <li>your age</li>
             <li>where you live</li>
           </ul>
-          <p><strong>Find out more about this research study: </strong><br><a href="/{{ PROTOTYPEURL }}/your-match/google-deepmind-study" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">www.nhs.uk/data-donor-sign-in</a></p>
+          <p><strong>Find out more about this research study: </strong><br><a href="/{{ PROTOTYPEURL }}/your-match/UK-biobank-study" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">www.nhs.uk/data-donor-sign-in</a></p>
 
             NHS<br style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" />
             <a href="/{{ PROTOTYPEURL }}" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" >www.nhs.uk/register-as-a-data-donor</a>
