--- a/app/views/register-as-a-data-donor/v1/your-match/we-wont-share-your-data.html
+++ b/app/views/register-as-a-data-donor/v1/your-match/we-wont-share-your-data.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v1" %}
 {% set serviceName = "Register as a data donor" %}
-{% set contentTitle = "We will not share your data with Google DeepMind for this research study" %}
+{% set contentTitle = "We will not share your data with UK Biobank for this research study" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
