--- a/app/views/register-as-a-data-donor/v1/your-profile/see-how-your-data-has-been-shared.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/see-how-your-data-has-been-shared.html
@@ -29,7 +29,7 @@
           <h3 class="timeline__title">April 2019</h3>
           <p class="timeline__info">
             <span class="nhsuk-u-visually-hidden">April 2019</span>
-            <span class="timeline__author">Google Deepmind</span>
+            <span class="timeline__author">UK Biobank</span>
           </p>
         </li>
 
