--- a/app/views/register-as-a-data-donor/v2/register/check-your-answers.html
+++ b/app/views/register-as-a-data-donor/v2/register/check-your-answers.html
@@ -1,5 +1,5 @@
 {% set PROTOTYPEURL = "register-as-a-data-donor/v2" %}
-{% set serviceName = "Secondary uses of data" %}
+{% set serviceName = "Register as a data donor" %}
 {% set contentTitle = "Check your answers before continuing" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
