--- a/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
+++ b/app/views/register-as-a-data-donor/v1/your-profile/your-data-donor-profile.html
@@ -25,7 +25,7 @@
       <h1>{{ contentTitle }}</h1>
       <ul class="app-list--unstyled app-list-cards">
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/index">
+          <a href="#">
             <h2 class="app-list-cards__heading nhsuk-heading-s">See how your data has been shared </h2>
           </a>
         </li>
