--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -8,9 +8,15 @@
 @import 'components/interruption-card';
 @import 'components/card';
 
+a:visited {
+
+  color: $color_nhsuk-blue;
+}
+
 @import 'prototype/list';
 @import 'prototype/email';
-
+@import 'prototype/study-card';
+@import 'prototype/timeline';
 ///////////////////////////////////////////
 // Add your custom CSS/Sass styles below...
 ///////////////////////////////////////////
@@ -24,4 +30,24 @@ li ul {
     @include nhsuk-responsive-margin(2, 'bottom');  // or $whateverTheRightVariableIsMate
 
   }
+}
+
+.loader {
+    border: 16px solid transparent;
+    border-top: 16px solid $color_nhsuk-blue;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin: auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.loader_text {
+
+  text-align: center;
 }
