--- a/app/views/see-how-data-is-shared/v1/login/user-signs-in.html
+++ b/app/views/see-how-data-is-shared/v1/login/user-signs-in.html
@@ -1,9 +1,10 @@
 {% set PROTOTYPEURL = "see-how-data-is-shared/v1" %}
 {% set serviceName = "See how data from your health records has helped research and planning" %}
-{% set contentTitle = "v1" %}
+{% set contentTitle = "You would sign in or create an account" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
+
 
 <!-- Extends the layout from /app/views/layouts/layout.html -->
 {% extends 'layouts/layout-transactional.html' %}
@@ -20,23 +21,25 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+
+      <div class="app-interruption">
+        <div class="app-interruption__wrapper">
+          <div class="app-interruption__content">
+            <h1 class="app-card__heading nhsuk-heading-l">{{ contentTitle }}</h1>
+            <p>
+              You would now either create an account or sign in to your NHS login.
+            </p>
+            <form action="/{{ PROTOTYPEURL }}/explainer/1" method="get">
+              <input type="submit" class="nhsuk-button nhsuk-button--reverse" value="Continue">
+            </form>
+          </div>
+        </div>
+      </div>
+
       {{ backLink({
         "href": "../index",
-        "text": "Back to prototype list"
+        "text": "Back to list"
       }) }}
-
-      <h1>
-        {{ contentTitle }}
-        <span class="nhsuk-caption-xl nhsuk-caption--bottom"> {{ serviceName }}</span>
-      </h1>
-
-      <h2>Landing pages</h2>
-      <ul>
-        <li>
-          <a href="/{{ PROTOTYPEURL }}/landing-pages/start">Start</a>
-        </li>
-      </ul>
-
 
     </div>
   </div>
