--- a/app/views/see-how-data-is-shared/v1/studies/5.html
+++ b/app/views/see-how-data-is-shared/v1/studies/5.html
@@ -36,9 +36,9 @@
 {% block beforeContent %}
 <section class="nhsuk-breadcrumb">
   <div class="nhsuk-width-container">
-    <ol class="nhsuk-breadcrumb__list">
-      <li class="nhsuk-breadcrumb__item">How your data has been used from <a class="nhsuk-breadcrumb__link" href="/level-one/level-two/level-three">1 January 2019 </a></li>
-    </ol>
+    <span class="nhsuk-caption-m nhsuk-caption--top">
+      Data from <a href="/{{ PROTOTYPEURL}}/timeframe/index">1 January 2019</a>
+    </span>
   </div>
 </section>
 {% endblock %}
