Updated existing pages

--- a/app/views/see-how-data-is-shared/v1/contact-choices/1-new-study.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/1-new-study.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "see-how-data-is-shared/v1" %}
 {% set serviceName = "See how data from your health records has helped research and planning" %}
-{% set contentTitle = "Would you like to be contacted when your data is shared for a new study?" %}
+{% set contentTitle = "Would you like us to contact you when we share your data for a new study?" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
