Updated flow to include new contact details for report

--- a/app/views/see-how-data-is-shared/v1/contact-choices/confirm-details-report.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/confirm-details-report.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "see-how-data-is-shared/v1" %}
 {% set serviceName = "See how data from your health records has helped research and planning" %}
-{% set contentTitle = "Check your data " %}
+{% set contentTitle = "Check your " %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -22,7 +22,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>{{ contentTitle }} {{ data['study'] }}</h1>
+      <h1>{{ contentTitle }} {{ report }}</h1>
 
       <p>
 
