--- a/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "see-how-data-is-shared/v1" %}
 {% set serviceName = "See how data from your health records has helped research and planning" %}
-{% set contentTitle = "What data['study'] would you like us to use to contact you? " %}
+{% set contentTitle = "What {{ study }} would you like us to use to contact you? " %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
