--- a/app/views/see-how-data-is-shared/v1/contact-choices/your-preferences.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/your-preferences.html
@@ -43,9 +43,9 @@
 
     <h1>{{contentTitle}}</h1>
 
-    <p>{{ data['study'] }}</p>
+    <p>{{ study }}</p>
 
-    <p>{{ data['report'] }}</p>
+    <p>{{ report }}</p>
 
     <form action="/{{ PROTOTYPEURL }}/summary/index" method="post">
     <input type="submit" class="nhsuk-button" value="Back to summary">
