--- a/app/views/see-how-data-is-shared/v1/contact-choices/confirm-details.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/confirm-details.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "see-how-data-is-shared/v1" %}
 {% set serviceName = "See how data from your health records has helped research and planning" %}
-{% set contentTitle = "Check your data " %}
+{% set contentTitle = "Check your" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -31,7 +31,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>{{ contentTitle }} {{ data['study'] }}</h1>
+      <h1>{{ contentTitle }} {{ study }}</h1>
 
       <p>
 
@@ -41,7 +41,7 @@
           "name": "confirmDetails",
           "fieldset": {
             "legend": {
-              "text": "Is this your current {{ data['study'] }}",
+              "text": "Is this your current {{ study }} ?",
               "classes": "nhsuk-fieldset__legend--m"
             }
           },
