--- a/app/views/see-how-data-is-shared/v1/studies/2.html
+++ b/app/views/see-how-data-is-shared/v1/studies/2.html
@@ -104,7 +104,7 @@
       <p>Your data was shared monthly until {{ study.dateLatestRelease }}.</p>
 
       {{ backLink({
-        "href": "/" + PROTOTYPEURL + "/summary/planning",
+        "href": "javascript:history.back()",
         "text": "Back to the previous page"
       }) }}
 
