--- a/app/views/see-how-data-is-shared/v1/studies/3.html
+++ b/app/views/see-how-data-is-shared/v1/studies/3.html
@@ -99,7 +99,7 @@
       <p>Your data was shared monthly.</p>
 
       {{ backLink({
-        "href": "/" + PROTOTYPEURL + "/summary/planning",
+        "href": "javascript:history.back()",
         "text": "Back to the previous page"
       }) }}
 
