--- a/app/views/see-how-data-is-shared/v1/studies/5.html
+++ b/app/views/see-how-data-is-shared/v1/studies/5.html
@@ -8,7 +8,7 @@
   {
     id: "5",
     category: "research",
-    title: "Impact of a community based social prescribing",
+    title: "Impact of community based social prescribing",
     dateFirstRelease: "March 2019",
     dateLatestRelease: "March 2019",
     dateFinished: "",
@@ -71,7 +71,7 @@
       <p>Your data was shared once.</p>
 
       {{ backLink({
-        "href": "/" + PROTOTYPEURL + "/summary/research",
+        "href": "javascript:history.back()",
         "text": "Back to the previous page"
       }) }}
 
