--- a/app/views/see-how-data-is-shared/v1/summary/index-1.html
+++ b/app/views/see-how-data-is-shared/v1/summary/index-1.html
@@ -81,7 +81,7 @@
             {
               id: "3",
               category: "research",
-              title: "Impact of a community based social prescribing",
+              title: "Impact of community based social prescribing",
               dateFirstRelease: "14 March 2019",
               dateLatestRelease: "",
               dateFinished: "",
