--- a/app/views/see-how-data-is-shared/v1/studies/1.html
+++ b/app/views/see-how-data-is-shared/v1/studies/1.html
@@ -92,7 +92,7 @@
       <p>Your data was shared monthly.</p>
 
       {{ backLink({
-        "href": "/" + PROTOTYPEURL + "/summary/planning",
+        "href": "javascript:history.back()",
         "text": "Back to the previous page"
       }) }}
 
