--- a/app/views/see-how-data-is-shared/v1/studies/4.html
+++ b/app/views/see-how-data-is-shared/v1/studies/4.html
@@ -77,7 +77,7 @@
       <p>Your data was shared monthly.</p>
 
       {{ backLink({
-        "href": "/" + PROTOTYPEURL + "/summary/research",
+        "href": "javascript:history.back()",
         "text": "Back to the previous page"
       }) }}
 
