--- a/app/views/see-how-data-is-shared/v1/summary/all.html
+++ b/app/views/see-how-data-is-shared/v1/summary/all.html
@@ -29,11 +29,6 @@
     <div class="nhsuk-grid-column-two-thirds">
         <div class="nhsuk-u-reading-width">
 
-          {{ backLink({
-            "href": "/" + PROTOTYPEURL + "/summary/index",
-            "text": "Back to the previous page"
-          }) }}
-
           <div class="nhsuk-u-margin-bottom-6">
             <h1 class="">
               {{ contentTitle }}
@@ -90,7 +85,7 @@
                 {
                   id: "5",
                   category: "research",
-                  title: "Impact of a community based social prescribing",
+                  title: "Impact of community based social prescribing",
                   dateFirstRelease: "March 2019",
                   dateLatestRelease: "",
                   dateFinished: "",
@@ -147,6 +142,12 @@
 
             </div>
           </div>
+
+          {{ backLink({
+            "href": "/" + PROTOTYPEURL + "/summary/index",
+            "text": "Back to the previous page"
+          }) }}
+          
       </div>
     </div>
   </div>
