--- a/app/views/see-how-data-is-shared/v1/summary/research.html
+++ b/app/views/see-how-data-is-shared/v1/summary/research.html
@@ -54,7 +54,7 @@
                 {
                   id: "5",
                   category: "research",
-                  title: "Impact of a community based social prescribing",
+                  title: "Impact of community based social prescribing",
                   dateFirstRelease: "March 2019",
                   dateLatestRelease: "",
                   dateFinished: "",
