--- a/app/views/see-how-data-is-shared/v1/contact-choices/2-would-you-like-a-report.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/2-would-you-like-a-report.html
@@ -1,6 +1,6 @@
 {% set PROTOTYPEURL = "see-how-data-is-shared/v1" %}
 {% set serviceName = "See how data from your health records has helped research and planning" %}
-{% set contentTitle = "Would you like us to send you a report about how your data has helped research and planning?" %}
+{% set contentTitle = "Would you like us to send you an annual report about how your data has helped research and planning?" %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -37,7 +37,7 @@
                 "items": [
                   {
                     "value": "yes",
-                    "text": "Yes, I would like a report sent to me about how my data has been used"
+                    "text": "Yes, I would like an annual report sent to me about how my data has been used"
                   },
                   {
                     "value": "no",
