--- a/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details.html
@@ -1,6 +1,15 @@
 {% set PROTOTYPEURL = "see-how-data-is-shared/v1" %}
 {% set serviceName = "See how data from your health records has helped research and planning" %}
-{% set contentTitle = "What {{ study }} would you like us to use to contact you? " %}
+{% set study  %}
+  {% if data['study'] == 'text' %}
+    mobile number
+  {% elif data['study'] == 'email' %}
+    email address
+  {% else %}
+    email address
+  {% endif %}
+{% endset %}
+{% set contentTitle = "What " + study + " would you like us to use to contact you? " %}
 {% set title = contentTitle + " - " + serviceName %}
 {% block pageScripts %}
 {% endblock %}
@@ -21,7 +30,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/{{ PROTOTYPEURL }}/contact-choices/weve-sent-an-email" method="get">
+      <form action="/{{ PROTOTYPEURL }}/contact-choices/1-update-preference" method="get">
 
         {{ input({
           "label": {
