--- a/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details-report.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details-report.html
@@ -31,7 +31,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/{{ PROTOTYPEURL }}/contact-choices/2-update-preference" method="get">
+      <form action="/{{ PROTOTYPEURL }}/contact-choices/2-update-preference" method="post">
 
         {{ input({
           "label": {
