--- a/app/views/see-how-data-is-shared/v1/summary/index.html
+++ b/app/views/see-how-data-is-shared/v1/summary/index.html
@@ -18,7 +18,7 @@
 <section class="nhsuk-breadcrumb">
   <div class="nhsuk-width-container">
     <span class="nhsuk-caption-m nhsuk-caption--top">
-      Data from <a href="/{{ PROTOTYPEURL}}/timeframe/index">1 January 2019</a>
+      Data from <a href="#">1 January 2019</a>
     </span>
   </div>
 </section>
@@ -74,7 +74,7 @@
           </a>
         </li>
         <li class="app-list-cards__item">
-          <a href="/{{ PROTOTYPEURL }}/data-choices/index">
+          <a href="#">
             <h3 class="app-list-cards__heading nhsuk-heading-m">Choose if data from your health records is shared</h3>
             <p>Decide whether personally identifiable data can be shared for research and planning</p>
           </a>
