--- a/app/views/see-how-data-is-shared/v1/contact-choices/confirm-details.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/confirm-details.html
@@ -15,6 +15,16 @@
   {% endif %}
 {% endset %}
 
+{% set questionFiller  %}
+  {% if data['study'] == 'text' %}
+    Yes, 00789101173 is my mobile phone number
+  {% elif data['study'] == 'email' %}
+    Yes, jane.doe@gmail.com is my email address
+  {% else %}
+    Yes, jane.doe@gmail.com is my email address
+  {% endif %}
+{% endset %}
+
 <!-- Extends the layout from /app/views/layouts/layout.html -->
 {% extends 'layouts/layout-transactional.html' %}
 
@@ -35,14 +45,31 @@
 
       {% if data['study'] == 'text' %}
 
-         <p>00789101173</p>
+        <dl class="nhsuk-summary-list">
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              Mobile phone
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              00789101173
+            </dd>
 
-
+          </div>
+        </dl>
 
          {% else %}
 
+         <dl class="nhsuk-summary-list">
+           <div class="nhsuk-summary-list__row">
+             <dt class="nhsuk-summary-list__key">
+               Email
+             </dt>
+             <dd class="nhsuk-summary-list__value">
+               jane.doe@gmail.com
+             </dd>
 
-         <p>jane.doe@gmail.com</p>
+           </div>
+         </dl>
 
 
          {% endif %}
@@ -61,7 +88,7 @@
           "items": [
             {
               "value": "yes",
-              "text": "Yes"
+              "text": questionFiller
             },
             {
               "value": "no",
