--- a/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details.html
@@ -30,7 +30,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="/{{ PROTOTYPEURL }}/contact-choices/1-update-preference" method="get">
+      <form action="/{{ PROTOTYPEURL }}/contact-choices/1-update-preference" method="post">
 
         {{ input({
           "label": {
