--- a/app/views/see-how-data-is-shared/v1/summary/planning.html
+++ b/app/views/see-how-data-is-shared/v1/summary/planning.html
@@ -18,7 +18,7 @@
 <section class="nhsuk-breadcrumb">
   <div class="nhsuk-width-container">
     <span class="nhsuk-caption-m nhsuk-caption--top">
-      Data from <a href="/{{ PROTOTYPEURL}}/timeframe/index">1 January 2019</a>
+      Data from <a href="#">1 January 2019</a>
     </span>
   </div>
 </section>
