add sixth study

--- a/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details-report.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details-report.html
@@ -41,6 +41,7 @@
           },
           "id": "inputreportnewdetails",
           "name": "reportnewdetails",
+          "autocomplete": "off",
           "classes": "nhsuk-input--width-20"
         }) }}
 
