--- a/app/views/see-how-data-is-shared/v1/organisations/1.html
+++ b/app/views/see-how-data-is-shared/v1/organisations/1.html
@@ -83,6 +83,20 @@
           timesDataShared: "19",
           organisation: "NHS Leeds Clinical Commissioning Group"
 
+        },
+        {
+
+          id: "6",
+          category: "planning",
+          title: "Invoice validation",
+          dateFirstRelease: "May 2019",
+          dateLatestRelease: "",
+          dateFinished: "",
+          timesDataShared: "1",
+          organisation: "NHS Leeds Clinical Commissioning Group",
+          organisationExplainer: "A Clinical Commissioning Group is an NHS organisation that helps plan which services an area needs. Including care services like GP surgeries and sexual health clinics",
+          phrase: "understand"
+
         }
 
         ] %}
