--- a/app/views/see-how-data-is-shared/v1/summary/planning.html
+++ b/app/views/see-how-data-is-shared/v1/summary/planning.html
@@ -70,6 +70,18 @@
                   timesDataShared: "5",
                   organisation: "Leeds City Council"
 
+                },
+                {
+                  id: "6",
+                  category: "planning",
+                  title: "Invoice validation",
+                  dateFirstRelease: "May 2019",
+                  dateLatestRelease: "",
+                  dateFinished: "",
+                  timesDataShared: "1",
+                  organisation: "NHS Leeds Clinical Commissioning Group",
+                  organisationExplainer: "A Clinical Commissioning Group is an NHS organisation that helps plan which services an area needs. Including care services like GP surgeries and sexual health clinics",
+                  phrase: "understand"
                 }
 
                 ] %}
