--- a/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details.html
+++ b/app/views/see-how-data-is-shared/v1/contact-choices/new-contact-details.html
@@ -40,6 +40,7 @@
           },
           "id": "inputstudynewdetails",
           "name": "studynewdetails",
+          "autocomplete": "off",
           "classes": "nhsuk-input--width-20"
         }) }}
 
